# Whisper

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  多agent小说写作需求.md
docs/: UI设计规格书.md  llm-conversation-flow.md  tools.md  多Agent写作助手需求规格说明书.md  多Agent系统架构设计.md  多Agent系统详细设计.md
docs/superpowers/specs/: 2026-06-22-whisper-mvp-design.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  rustc-wrapper.sh  tauri.conf.json  test_nopipe.rs
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  logger.rs  main.rs  models.rs
src-tauri/src/commands/: chat.rs  config.rs  export.rs  mod.rs  project.rs  settings.rs  skill.rs
src-tauri/src/llm/: client.rs  prompt.rs
src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx
src/components/common/: Button.tsx  Dialog.tsx  Toast.tsx
src/components/editor/: EditorToolbar.tsx  WritingEditor.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/panel/: DynamicPanel.tsx
src/components/project/: ProjectInitScreen.tsx
src/components/settings/: AboutPage.tsx  ApiConfigDialog.tsx  ApiConfigPage.tsx  SettingCardEditor.tsx  SettingCardVersionList.tsx  SettingsPanel.tsx
src/components/sidebar/: OutlineTree.tsx  SettingCardList.tsx
src/stores/: apiConfigStore.ts  chatStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts
src/types/: index.ts
src/utils/: tauri.ts
