[package]
name = "whisper"
version = "0.1.0"
description = "轻语 - AI写作助手"
authors = ["you"]
edition = "2021"

[lib]
name = "whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
futures-util = "0.3"
docx-rs = "0.4"

# 强制 proc-macro2 使用 span-locations feature，跳过 build script 的 rustc 探测
# 这是为了解决 Windows 上 Command::output() 的进程创建问题
[dependencies.proc-macro2]
version = "1"
features = ["span-locations"]
